Terminal Saved Output
Last login: Thu Feb 17 13:47:14 on ttys000
romythutran@re-boyds-145-109-159-75 ~ % cd blok-tech_klas-tech2
romythutran@re-boyds-145-109-159-75 blok-tech_klas-tech2 % node index.js
/Users/romythutran/Blok-Tech_klas-tech2/index.js:15
const express = require('express')
      ^

SyntaxError: Identifier 'express' has already been declared
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1026:15)
    at Module._compile (node:internal/modules/cjs/loader:1061:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1149:10)
    at Module.load (node:internal/modules/cjs/loader:975:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:77:12)
    at node:internal/main/run_main_module:17:47

Node.js v17.4.0
romythutran@re-boyds-145-109-159-75 blok-tech_klas-tech2 % node index.js
/Users/romythutran/Blok-Tech_klas-tech2/index.js:15
const express = require('express')
      ^

SyntaxError: Identifier 'express' has already been declared
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1026:15)
    at Module._compile (node:internal/modules/cjs/loader:1061:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1149:10)
    at Module.load (node:internal/modules/cjs/loader:975:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:77:12)
    at node:internal/main/run_main_module:17:47

Node.js v17.4.0
romythutran@re-boyds-145-109-159-75 blok-tech_klas-tech2 % node index.js
/Users/romythutran/Blok-Tech_klas-tech2/index.js:15
const express = require('express')
      ^

SyntaxError: Identifier 'express' has already been declared
    at Object.compileFunction (node:vm:352:18)
    at wrapSafe (node:internal/modules/cjs/loader:1026:15)
    at Module._compile (node:internal/modules/cjs/loader:1061:27)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1149:10)
    at Module.load (node:internal/modules/cjs/loader:975:32)
    at Function.Module._load (node:internal/modules/cjs/loader:822:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:77:12)
    at node:internal/main/run_main_module:17:47

Node.js v17.4.0
romythutran@re-boyds-145-109-159-75 blok-tech_klas-tech2 % node index.js
node index.js
